fix footer going out of bounds

--- a/style.css
+++ b/style.css
@@ -214,7 +214,7 @@ body {
 footer {
     background-color: black;
     color: white;
-    width: 100vw;
+    width: 100%;
     text-align: center;
     margin: 0;
     height: auto;
